[package]
name = "kiddo"
version = "5.2.1"
edition = "2021"
authors = ["Scott Donnelly <scott@donnel.ly>"]
description = "A high-performance, flexible, ergonomic k-d tree library. Ideal for geo- and astro- nearest-neighbour and k-nearest-neighbor queries"
keywords = ["kd-tree", "kdtree", "kd", "nearest-neighbor", "knn"]
readme = "README.md"
repository = "https://github.com/sdd/kiddo"
documentation = "https://docs.rs/kiddo"
license = "MIT OR Apache-2.0"
autobenches = false
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[features]
cargo_asm = ["dep:rand", "dep:rand_chacha"]
csv = ["dep:csv"]
default = ["tracing", "fixed"]
modified_van_emde_boas = []
f16 = ["dep:half"]
fixed = ["dep:fixed"]
no_inline = []
las = ["dep:las"]
serde = [
    "dep:serde",
    "serde/derive",
    "fixed/serde",
    "aligned-vec/serde",
]
simd = []
simulator = []
rkyv_08 = ["dep:rkyv_08"]
test_utils = ["dep:rand", "dep:rand_chacha", "dep:rayon", "dep:fixed"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
generator = "0.8.4"

[dependencies]
aligned-vec = "0.6.1"
array-init = "2.1.0"
az = "1"
cmov = "0.3"
divrem = "1"
doc-comment = "0.3"
num-traits = "0.2"
ordered-float = "5"
sorted-vec = "0.8"

[dependencies.csv]
version = "1"
optional = true

[dependencies.fixed]
version = "1"
features = ["num-traits"]
optional = true

# half 2.5.0 switched from rkyv 0.7 to rkyv 0.8.
[dependencies.half]
version = "2.5.0"
optional = true
features = ["num-traits"]

[dependencies.las]
version = "0.9"
optional = true
features = ["laz-parallel"]

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.rand_chacha]
version = "0.9"
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dependencies.rkyv_08]
package = "rkyv"
version = "0.8.9"
optional = true

[dependencies.serde]
version = "1"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
codspeed-criterion-compat = "2.10"
criterion = "0.7"
elapsed = "0.1.2"
flate2 = { version = "1", features = ["zlib-ng-compat"], default-features = false }
itertools = "0.14"
# required to be able to run tests without specifying --features=test_utils
# see https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
kiddo = { path = ".", features = ["test_utils"] }
las = { version = "0.9", features = ["laz-parallel"] }
memmap = "0.7"
proc-macro2 = { version = "1", features = ["default", "proc-macro"] }
radians = "0.3"
rand = "0.9"
rand_distr = "0.5"
rayon = "1"
rstest = "0.25"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
ubyte = "0.10"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "add_points"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_one"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_one_immutable"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "nearest_n"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "within"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "within_unsorted"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "best_n"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "approx_nearest_one_immutable"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "get_leaf_idx_immutable"
harness = false
required-features = ["test_utils"]

[[bench]]
name = "get_leaf_idx_immutable_mt"
harness = false
required-features = ["test_utils"]

[[example]]
name = "avx2-check"
path = "examples/avx2-check.rs"

[[example]]
name = "build-float-doctest-tree-rkyv_08"
path = "examples/build-float-doctest-tree-rkyv_08.rs"
required-features = ["rkyv_08"]

[[example]]
name = "build-immutable-doctest-tree-rkyv_08"
path = "examples/build-immutable-doctest-tree-rkyv_08.rs"
required-features = ["rkyv_08"]

[[example]]
name = "check-select-nth-unstable"
path = "examples/check-select-nth-unstable.rs"

[[example]]
name = "cities"
path = "examples/cities.rs"
required-features = ["csv"]

[[example]]
name = "float-rkyv_08-serialize"
path = "examples/float-rkyv_08-serialize.rs"
required-features = ["rkyv_08"]

[[example]]
name = "float-rkyv_08-deserialize"
path = "examples/float-rkyv_08-deserialize.rs"
required-features = ["rkyv_08"]

[[example]]
name = "half"
path = "examples/half.rs"
required-features = ["f16"]

[[example]]
name = "immutable-large"
path = "examples/immutable-large.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-ann-donnelly"
path = "examples/immutable-large-ann-donnelly.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-ann-donnelly-deserialize-and-query"
path = "examples/immutable-large-ann-donnelly-deserialize-and-query.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-donnelly-simulate-traverse-f32"
path = "examples/immutable-large-donnelly-simulate-traverse-f32.rs"
required-features = ["test_utils", "rkyv_08", "simulator"]

[[example]]
name = "immutable-large-donnelly-simulate-traverse-f64"
path = "examples/immutable-large-donnelly-simulate-traverse-f64.rs"
required-features = ["test_utils", "rkyv_08", "simulator"]

[[example]]
name = "immutable-large-ann-donnelly-build-and-serialize"
path = "examples/immutable-large-ann-donnelly-build-and-serialize.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-donnelly-build-and-serialize-d4-f32"
path = "examples/immutable-large-donnelly-build-and-serialize-d4-f32.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-donnelly-simulate-traverse-f32-unrolled"
path = "examples/immutable-large-donnelly-simulate-traverse-f32-unrolled.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-donnelly-deserialize-and-traverse-f32-unrolled"
path = "examples/immutable-large-donnelly-deserialize-and-traverse-f32-unrolled.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-eytz-build-and-serialize-f32"
path = "examples/immutable-large-eytz-build-and-serialize-f32.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-eytz-simulate-traverse-f32"
path = "examples/immutable-large-eytz-simulate-traverse-f32.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-eytz-deserialize-and-traverse-f32"
path = "examples/immutable-large-eytz-deserialize-and-traverse-f32.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-eytz-simulate-traverse-f64"
path = "examples/immutable-large-eytz-simulate-traverse-f64.rs"
required-features = ["test_utils", "rkyv_08", "simulator"]

[[example]]
name = "immutable-large-ann-eytz-build-and-serialize"
path = "examples/immutable-large-ann-eytz-build-and-serialize.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-large-ann-eytzinger"
path = "examples/immutable-large-ann-eytzinger.rs"
required-features = ["test_utils"]

[[example]]
name = "immutable-rkyv_08-serialize"
path = "examples/immutable-rkyv_08-serialize.rs"
required-features = ["rkyv_08"]

# TODO: strange bug here
#[[example]]
#name = "immutable-rkyv_08-deserialize"
#path = "examples/immutable-rkyv_08-deserialize.rs"
#required-features = ["rkyv_08"]

[[example]]
name = "pointcloud-las"
path = "examples/pointcloud-las.rs"
required-features = ["las", "rkyv_08"]

[[example]]
name = "pointcloud-csv"
path = "examples/pointcloud-csv.rs"
required-features = ["csv", "rkyv_08"]

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["csv", "serde"]
